; ModuleID = '/home/carl/AnghaBench/AppImageKit/src/extr_AppRun.c_filter.c'
source_filename = "/home/carl/AnghaBench/AppImageKit/src/extr_AppRun.c_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirent = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c".desktop\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @filter(%struct.dirent* %0) #0 {
  %2 = alloca %struct.dirent*, align 8
  %3 = alloca i8*, align 8
  store %struct.dirent* %0, %struct.dirent** %2, align 8
  %4 = load %struct.dirent*, %struct.dirent** %2, align 8
  %5 = getelementptr inbounds %struct.dirent, %struct.dirent* %4, i32 0, i32 0
  %6 = bitcast i32* %5 to i8*
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i8* @strrchr(i8* %7, i8 signext 46)
  store i8* %8, i8** %3, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @strcmp(i8* %12, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  br label %16

16:                                               ; preds = %11, %1
  %17 = phi i1 [ false, %1 ], [ %15, %11 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
